objects/Knowledge_Base__c.object
<CustomObject>
    <description>Added Description</description>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <label>Association</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Solution__c</fullName>
        <label>Data Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_category__c</fullName>
        <label>Data category</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <label>Knowledge Base</label>
    <nameField>
        <label>Knowledge Base Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>